align local-server controllers and endpoints to that of the remote sidecar
