# src/domain/log/logs.types.ts
@@ -4,5 +4,4 @@ export type WriteLogRequestBody = {
   method: LogMethods;
   message?: string;
   error?: string | Record<string, unknown>;
-  params?: Record<string, unknown>;
 };
