# src/domain/secrets/secrets.controller.ts
@@ -12,20 +12,29 @@ export class SecretsController {
   @Get('{name}')
   @OperationId('getSecret')
   @SuccessResponse(StatusCodes.OK, ReasonPhrases.OK)
-  public getSecretForKey(@Path() name: string, @Res() notFoundResponse: TsoaResponse<404, { reason: string }>): string {
+  public getSecretForKey(
+    @Path() name: string,
+    @Res()
+    notFoundResponse: TsoaResponse<
+      StatusCodes.NOT_FOUND,
+      {
+        reason: string;
+      }
+    >
+  ): string {
     const secret = SecretService.getSecretForKey(name);
     if (!secret) {
-      return notFoundResponse(404, { reason: 'Secret not found' });
+      return notFoundResponse(StatusCodes.NOT_FOUND, { reason: 'Secret not found' });
     }
 
     return secret;
   }
-}
 
-// TODO:
-/**
- * Required Changes to TARGET:
- * Add Missing Endpoint:
- * Implement the /secrets GET endpoint in TARGET to retrieve all secret keys.
- * Define the operation as getSecretKeys with a 200 response returning an array of strings, similar to SIDECAR.
- */
+  @Get()
+  @OperationId('getSecretKeys')
+  @SuccessResponse(StatusCodes.OK, ReasonPhrases.OK)
+  public async getKeys(): Promise<string[]> {
+    const keys = SecretService.getSecretKeys();
+    return keys;
+  }
+}
