# src/domain/storage/storage.controller.ts
@@ -18,31 +18,20 @@ export class StorageController {
     @Path() key: string,
     @Query() shared: boolean,
     @Header('x-monday-access-token') accessToken: string,
-    @Res() notFoundResponse: TsoaResponse<404, { reason: string }>,
-    @Res() serverError: TsoaResponse<500, { reason?: string }>
+    @Res() notFoundResponse: TsoaResponse<StatusCodes.NOT_FOUND, { reason: string }>,
+    @Res() serverError: TsoaResponse<StatusCodes.INTERNAL_SERVER_ERROR, { reason?: string }>
   ): Promise<{ value: JsonValue; version?: string }> {
     const storageService = new StorageService(accessToken);
     const { value, version, success } = await storageService.get(key);
     if (!success && value === null) {
-      return notFoundResponse(404, { reason: 'Key not found' });
+      return notFoundResponse(StatusCodes.NOT_FOUND, { reason: 'Key not found' });
     }
 
     if (!success) {
-      return serverError(500, { reason: 'An error occurred while fetching the key' });
+      return serverError(StatusCodes.INTERNAL_SERVER_ERROR, { reason: 'An error occurred while fetching the key' });
     }
 
     return { value, version };
-
-    // TODO:
-    /**
-     * Differences Identified:
-     * Response Data Type:
-     * SIDECAR uses StorageDataContract.
-     * TARGET directly returns a JSON object.
-     * Required Changes to TARGET:
-     * Standardize Response Type:
-     * Adjust TARGET to use StorageDataContract for the response type to ensure type consistency.
-     */
   }
 
   @Delete('{key}')
@@ -59,23 +48,14 @@ export class StorageController {
   public async updateValue(
     @Header('x-monday-access-token') accessToken: string,
     @Path() key: string,
-    @Body() body: SetStorageForKeyRequestBody
-  ): Promise<JsonValue> {
-    const { value, previousVersion, shared } = body;
+    @Body() body: SetStorageForKeyRequestBody,
+    @Query() shared?: boolean,
+    @Query() previousVersion?: string
+  ) {
+    const { value } = body;
     const storageService = new StorageService(accessToken);
-    await storageService.set(key, value, { previousVersion, shared });
-
-    return value;
-    // TODO
-    /**
-     * Differences Identified:
-     * Request Body Type:
-     * SIDECAR uses StorageDataContract.
-     * TARGET uses SetStorageForKeyRequestBody.
-     * Required Changes to TARGET:
-     * Align Request Body Type:
-     * Change the request body type in TARGET from SetStorageForKeyRequestBody to StorageDataContract to maintain type consistency across both APIs.
-     */
+    const result = await storageService.set(key, value, { previousVersion, shared });
+    return result;
   }
 
   @Put('counter/increment')
@@ -84,26 +64,10 @@ export class StorageController {
   public async counterIncrement(
     @Header('x-monday-access-token') accessToken: string,
     @Body() body: IncrementStorageForKeyRequestBody
-  ): Promise<string | undefined> {
+  ) {
     const { period, incrementBy, renewalDate, kind } = body;
     const storageService = new StorageService(accessToken);
-    const value = await storageService.incrementCounter(period, { incrementBy, kind, renewalDate });
-    return value?.newCounterValue?.toString();
-
-    // TODO:
-    /**
-     * Differences Identified:
-     * Request Body Type:
-     * SIDECAR uses IncrementCounterParams.
-     * TARGET uses IncrementStorageForKeyRequestBody.
-     * Method Type:
-     * SIDECAR uses POST.
-     * TARGET uses PUT.
-     * Required Changes to TARGET:
-     * Align Method Type:
-     * Change the method type in TARGET from PUT to POST to match SIDECAR.
-     * Align Request Body Type:
-     * Change the request body type in TARGET from IncrementStorageForKeyRequestBody to IncrementCounterParams to maintain consistency.
-     */
+    const result = await storageService.incrementCounter(period, { incrementBy, kind, renewalDate });
+    return result;
   }
 }
